sonar issues fixed (codesmells)